# Crate-and-Crypt

./: BACKEND_ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md  NETWORK_PROTOCOL.md  PROJECT_PLAN.md  README.md  TECHNICAL_REQUIREMENTS.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package.json  tsconfig.json
frontend/public/: coi-serviceworker.js  index.html
frontend/public/assets/data/: items.json  levels.json
frontend/src/: dev-server.ts  main.ts
frontend/src/css/: main.css
frontend/src/js/: app.ts  global.d.ts  main.ts
frontend/src/js/engine/: game-engine.ts  renderer.js  renderer.ts
frontend/src/js/entities/: player-manager.ts  player.ts
frontend/src/js/network/: connection.js  connection.ts
frontend/src/js/ui/: ui-manager.js  ui-manager.ts
frontend/src/js/utils/: controls-manager.ts  input.js  input.ts  loader.js  loader.ts
