[package]
name = "crate_and_crypt_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
actix-web = "4"
actix-web-actors = "4.1"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
rapier3d = { version = "0.18.0", features = ["serde-serialize"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
